# the-singularity

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  pytest.ini  requirements.txt  start_backend.py  start_frontend.sh
.github/workflows/: claude.yml
backend/: app_config.py  async_game_manager.py  auth.py  logging_config.py  main.py  redis_store.py  schemas.py  special_achievements.py
backend/action_primitives/: __init__.py  achieve_secret.py  add_to_safe.py  append_to_list.py  archive_card.py  base.py  calculate_value.py  check_hand_not_empty.py  check_is_my_turn.py  choose_option.py  claim_achievement.py  conditional_action.py  constants.py  convert_to_int.py  count_cards.py  count_colors_with_splay.py  count_colors_with_symbol.py  count_symbols.py  count_unique_colors.py  count_unique_symbols.py  count_unique_values.py  demand_effect.py  draw_cards.py  evaluate_condition.py  exchange_cards.py  execute_dogma.py  filter_cards.py  flip_coin.py  get_card_age.py  get_card_color.py  get_card_colors.py  get_card_symbols.py  get_lowest_value.py  get_splay_direction.py  increment_variable.py  junk_all_deck.py  junk_cards.py  loop_action.py  make_available.py  meld_card.py  (+32 more)
backend/data/: ACTION_VARIABLES.md  BaseCards.json  SingularityCards.json  cards.py
backend/dogma_v2/: __init__.py  consolidated_executor.py  consolidated_phases.py  dogma_phase.py  effect_selection.py  exceptions.py  execution_result.py  interaction_request.py  phase_logger.py  phase_result.py  result_type.py  resume_manager.py  state_tracker.py  victory_checker.py
backend/interaction/: __init__.py  builder.py
backend/models/: __init__.py  board_utils.py  card.py  deck_manager.py  expansion.py  forecast_zone.py  game.py  museum.py  player.py  safe.py  score_manager.py  snapshot.py  special_icon.py
backend/routers/: ai_games.py  cards.py  games.py  system.py  websocket.py
backend/schemas/: __init__.py  interaction_data.py  websocket_messages.py
backend/services/: ai_bootstrap.py  ai_cost_monitor.py  ai_evaluation.py  ai_event_subscriber.py  ai_memory.py  ai_personalities.py  ai_player_agent.py  ai_prompt_builder.py  ai_service.py  ai_turn_executor.py  broadcast_service.py  connection_manager.py  dogma_response_handler.py  game_actions.py  game_event_bus.py  game_helpers.py  lock_service.py  rate_limiter.py  websocket_handler.py
backend/tests/: conftest.py  test_ai_turn_executor.py  test_cards.py  test_demand_variable_leak.py  test_dogma.py  test_game_lifecycle.py  test_special_achievements.py  test_variable_isolation.py
backend/utils/: background_tasks.py  board_utils.py  card_utils.py  player_utils.py  symbol_counter.py  symbol_mapping.py  validation_utils.py
docs/: CardTemplate.html  RULES.md
docs/specifications/: ACTION_PRIMITIVES_SCHEMA.md  BalanceAnalysis_MonteCarlo.txt  BalanceAnalysis_Stats.txt  GAME_PREAMBLE_SPEC.md  TheSingularity_DesignDocument.docx  TheSingularity_RulesReference.docx  TheSingularity_SpecialAchievements_Spec.docx  TheSingularity_VisualDesignSpec.docx
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.js  index.js  index.module.css  setupTests.js  theme.js
test_scenarios/automation/: analyze_scenario_failures.py  suggest_scenario_fixes.py  test_achievement_flow.py  test_agriculture_scenario.py  test_ai_card_scenario.py  test_ai_vs_ai_full_game.py  test_alchemy_scenario.py  test_anatomy_scenario.py  test_antibiotics_scenario.py  test_archery_vs_masonry_scenario.py  test_archery_vs_writing_scenario.py  test_astrogeology_scenario.py  test_astronomy_scenario.py  test_atomic_theory_scenario.py  test_banking_scenario.py  test_bicycle_scenario.py  test_bioengineering_scenario.py  test_calendar_scenario.py  test_canal_building_scenario.py  test_canning_scenario.py  test_chemistry_scenario.py  test_city_states_scenario.py  test_classification_scenario.py  test_climatology_scenario.py  test_clothing_scenario.py  test_coal_scenario.py  test_code_of_laws_optional_scenario.py  test_collaboration_scenario.py  test_colonialism_scenario.py  test_combustion_scenario.py  test_compass_scenario.py  test_composites_scenario.py  test_computers_scenario.py  test_construction_scenario.py  test_corporations_scenario.py  test_currency_scenario.py  test_databases_scenario.py  test_democracy_scenario.py  test_domestication_scenario.py  test_domestication_sharing_scenario.py  (+83 more)
(+202 files in other folders)
