[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innovation-game"
version = "1.0.0"
description = "Innovation card game implementation"
authors = [{name = "Innovation Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | test_venv
    | \.tox
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
    | node_modules
    | serena
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["backend", "tests"]
skip_gitignore = true
skip = ["venv", "test_venv", ".venv", "build", "dist", "node_modules", "serena"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort - disabled, using dedicated isort tool instead
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "C90", # mccabe complexity
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # ruff specific rules
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex, we'll handle this gradually
    "T201",   # print found (we use print in some debug scripts)
    "ARG002", # unused method argument (common in interfaces)
    "UP007",  # use X | Y for type annotations (keep Union for older Python compat)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "test_venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
    "node_modules",
    "serena",
]

[tool.ruff.isort]
known-first-party = ["backend", "tests"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"test_*.py" = ["ARG001", "ARG002"]  # unused arguments common in tests
"tests/*.py" = ["ARG001", "ARG002"] # unused arguments common in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = false  # Enable gradually
no_implicit_optional = false  # Allow gradual migration
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    "venv/",
    "test_venv/",
    ".venv/",
    "serena/",
    "node_modules/",
]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "pytest.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
]
ignore_missing_imports = true

# Gradual adoption - start with critical modules only
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "dogma_v2.tests.*",
]
ignore_errors = true

# Focus on new utility modules first
[[tool.mypy.overrides]]
module = [
    "utils.validation_utils",
    "utils.board_utils",
    "utils.card_utils",
    "utils.player_utils",
]
disallow_untyped_defs = false
strict_optional = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/venv/*",
    "*/test_venv/*",
    "*/.venv/*",
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "backend/archive/*",
    "backend/serena/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
